# briefcast

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  NEXT_STEPS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_source_feed_type.py
app/: config.py  db.py  main.py  worker.py
app/briefing/: composer.py
app/delivery/: slack_bot.py  telegram_bot.py
app/ingestion/: circuit_breaker.py  classifier.py  dedup.py  fetcher.py  registry.py
app/models/: __init__.py  article.py  source.py
app/observability/: logger.py
app/processing/: embedder.py  summariser.py
app/rag/: chat_responder.py  responder.py  retriever.py  web_searcher.py
app/ranking/: ranker.py
decisions/: 001-pgvector-over-pinecone.md  002-model-selection-cost-quality.md  003-rss-only-v1-ingestion.md  004-citations-mandatory.md  005-google-tier1-priority.md  006-storage-modes.md  007-openrouter-gateway.md  008-telegram-over-slack.md  009-nomic-api-over-local-embedding.md  010-prompt-caching-rag-system-prompt.md  011-single-path-query-ux.md  012-full-pipeline-langsmith-tracing.md  design-faq.md
docs/: POLICY.md  architecture.md  env-setup.md  eval-harness.md  langsmith-tracing.md  railway-deployment.md
evals/: eval_runner.py  questions.json
scripts/: cost_report.py  dry_run_ingestion.py  init_db.py  run_briefing_once.py  run_evals.py  run_ingestion_once.py  run_ranking_once.py  seed_sources.py
tests/: test_dedup.py  test_ranker.py  test_retriever.py
