[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "briefcast"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "feedparser>=6.0",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "python-telegram-bot>=21.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
    # Evaluation harness (v1.5) — pin to explodinggradients 0.2.x; 0.3+ is a different fork
    "ragas>=0.2,<0.3",
    "datasets>=2.19",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
